[package]
name = "embercat"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbercatProject/Chandra"
homepage = "https://embercat.io"
description = "Will contain more information soon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chandra = { path = "../Chandra", version="0.0.0", default-features = false }

[features]
default = ["gpu", "std"]
gpu = ["chandra/gpu"]
nightly = ["chandra/nightly"]
std = ["chandra/std"]